# signac-flow

./: .bumpversion  .bumpversion.cfg  .deploy.bash  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .sync-contributors.py  .sync-zenodo-metadata.py  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ContributorAgreement.md  LICENSE.txt  MANIFEST.in  README.md  bitbucket-pipelines.yml  changelog.txt  contributors.txt  contributors.yaml  groups.py  pyproject.toml  requirements-dev.txt  requirements-precommit.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: ci-oldest-reqs.txt  config.yml  deploy.bash
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-oldest-reqs.txt  publish-packages.yml  run-pytest.yml
benchmarks/: benchmark.py  profiling.py
doc/: Makefile  acknowledge.rst  api.rst  basics.rst  changes.rst  cli-help.txt  cli.rst  cluster_submission.rst  conf.py  doc-project.py  environments.rst  example.rst  flow.rst  index.rst  installation.rst  modules.rst  packaged_envs.rst  project-cli.rst  project.rst  reference.rst  requirements.txt  support.rst  supported_environments.rst  templates.rst
doc/supported_environments/: andes.rst  anvil.rst  base.rst  bridges.rst  bridges2.rst  comet.rst  crusher.rst  delta.rst  drexel.rst  eos.rst  expanse.rst  frontier.rst  lsf.rst  pbs.rst  slurm.rst  stampede2.rst  summit.rst  titan.rst  torque.rst  umich.rst  umn.rst
flow/: __init__.py  __main__.py  aggregate.py  aggregates.py  apscheduler.py  conditions.py  directives.py  environment.py  errors.py  fakescheduler.py  graph.py  hooks.py  jobs.py  labels.py  legacy.py  legacy_templating.py  manage.py  moab.py  mongodb_queue.py  mongodb_set.py  operation.py  operations.py  project.py  project_legacy.py  render_status.py  scheduler.py  slurm.py  status.py  submit.py  template.py  testing.py  torque.py  version.py
flow/_cli/: __init__.py  init.py  template.py
flow/environments/: __init__.py  drexel.py  incite.py  purdue.py  umich.py  umn.py  xsede.py
flow/graph/: __init__.py  graph.py
flow/hooks/: __init__.py  git_util.py  git_workspace_tracking.py  hooks.py  log_operations.py  snapshots.py  track_operations.py  util.py
flow/hooks/track_operations/: __init__.py  __main__.py
flow/migration/: __init__.py  v0_to_v1.py
flow/scheduling/: __init__.py  base.py  fake_scheduler.py  fakescheduler.py  lsf.py  models.py  pbs.py  simple_scheduler.py  slurm.py  status.py  torque.py
flow/scripts/: __init__.py  template_test.py
flow/templates/: __init__.py  andes.sh  anvil.sh  base_run.sh  base_script.sh  base_status.jinja  base_status_compact.jinja  base_status_expand.jinja  base_status_stack.jinja  base_submit.sh  bridges.sh  bridges2.sh  comet.sh  crusher.sh  custom.sh  custom_script_template.sh  delta.sh  drexel-picotte.sh  eos.sh  expanse.sh  frontier.sh  greatlakes.sh  init_test_environment.pyt  lsf.sh  md_base_status_compact.jinja  md_base_status_expand.jinja  md_base_status_stack.jinja  md_status.jinja  md_status_compact.jinja  md_status_expand.jinja  md_status_stack.jinja  pbs.sh  print_status.jinja  print_status.sh  print_status_compact.jinja  print_status_expand.jinja  print_status_expand.sh  print_status_stack.jinja  project_example.pyt  project_minimal.pyt  (+28 more)
flow/util/: __init__.py  config.py  dependencies.py  execution.py  misc.py  progressbar.py  run.py  tabulate.py  template_filters.py  translate.py
flow/util/_decorate/: __init__.py  _with_job.py  with_job.py
flow/util/mistune/: renderers.py
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
test_groups/: groups.py  init.py  signac.rc  signac_project_document.json
test_groups/workspace/0ee2526e06f2332718c4791c37ac9393/: signac_statepoint.json
test_groups/workspace/509cc34468273e3d41fdfd4ee1197ee6/: signac_statepoint.json
test_groups/workspace/704ea672cfe4fb4b638ce9767e9201f6/: signac_statepoint.json
test_groups/workspace/76f3ca5fa1e936b9700aadadb6f534ad/: signac_statepoint.json
test_groups/workspace/814c35c27e96f65636b23eb4c93b7a3b/: signac_statepoint.json
test_groups/workspace/88a99fa3591c3e8cac1e9bc670d49dc1/: signac_statepoint.json
test_groups/workspace/f1cf7240a4a25c44d4b55cb436537a39/: signac_statepoint.json
testing/: __init__.py  test_status.py
tests/: .gitignore  conftest.py  define_aggregate_test_project.py  define_dag_test_project.py  define_directives_test_project.py  define_group_test_project.py  define_hooks_install.py  define_hooks_logging_install.py  define_hooks_logging_project.py  define_hooks_test_project.py  define_hooks_track_operations_project.py  define_hooks_track_operations_strict_project.py  define_status_test_project.py  define_template_test_project.py  define_test_aggregate_project.py  define_test_project.py  extract_status.py  extract_templates.py  generate_data.py  generate_status_reference_data.py  generate_template_reference_data.py  generate_template_review_document.py  interactive_template_test.py  tempdir.py  test_aggregate.py  test_aggregates.py  test_directives.py  test_environment.py  test_graph.py  test_project.py  test_project_legacy_api.py  test_shell.py  test_status.py  test_template_filters.py  test_templates.py  test_util.py
tests/expected_submit_outputs/: generate_data.py  init.py  project.py  signac.rc
tests/real-project/: .gitignore  project.py
(+359 files in other folders)
