[bumpversion]
current_version = 0.11.0
commit = True
tag = False
message = Bump up to version {new_version}.

[metadata]
description-file = README.md

[bdist_wheel]
python-tag = py3

[pydocstyle]
match = ^((?!\.sync-zenodo-metadata|setup).)*\.py$
match-dir = ^((?!\.|tests|mistune).)*$
ignore-decorators = "deprecated"
ignore = D105,D107,D203,D204,D213

[flake8]
max-line-length = 100
exclude = mistune
# Use select to ignore unwanted flake8 plugins
select = E,F,W
# Specify errors to ignore by default
ignore = E123,E126,E226,E241,E704,W503,W504

[bumpversion:file:setup.py]

[bumpversion:file:flow/version.py]

[bumpversion:file:doc/conf.py]

[bumpversion:file:CITATION.cff]

[bumpversion:file:.zenodo.json]

[tool:pytest]
filterwarnings =
	ignore:.*get_id is deprecated.*:DeprecationWarning
	ignore:.*The env argument is deprecated*:DeprecationWarning
