[bumpversion]
current_version = 0.15.0
commit = True
tag = False
message = Bump up to version {new_version}.

[metadata]
description-file = README.md

[bdist_wheel]
python-tag = py3

[pydocstyle]
convention = numpy
match = ^((?!\.sync-zenodo-metadata|setup).)*\.py$
match-dir = ^((?!\.|tests|mistune).)*$
ignore-decorators = "deprecated"

[flake8]
max-line-length = 100
exclude = mistune
select = E,F,W
ignore = E123,E126,E226,E241,E704,W503,W504

[coverage:run]
branch = True
concurrency = thread,multiprocessing
parallel = True
source = flow
omit = 
	*/flow/util/mistune/*.py

[bumpversion:file:setup.py]

[bumpversion:file:flow/version.py]

[bumpversion:file:doc/conf.py]

[bumpversion:file:CITATION.cff]

[bumpversion:file:.zenodo.json]

[tool:pytest]
filterwarnings = 
	ignore:.*get_id is deprecated.*:DeprecationWarning
	ignore:.*The env argument is deprecated*:DeprecationWarning
